--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,12 @@
     <title>Girl Who Code Partner Opportunities</title>
   </head>
   <body>
-    <img src="GWC-Logo.jpg" /> 
-    <nav>
+    <div style="width:100%;text-align:center">
+        <img src="GWC-Logo.jpg" style="display:inline-block;margin: 10p auto;"/> 
+    </div>
+    <!--<nav>
       <a href="/my-opportunities">My Opportunities</a>
-    </nav>
+    </nav>-->
     <div id="root"></div>
   </body>
 </html>
